*Tue Nov 1 2011 Henri Gavin <.> 0.20100105
- correction to user-manual.html regarding shear correction factor equations 

*Mon Oct 31 2011 Henri Gavin <.> 0.20100105
- update user-manual.html regarding shear correction factors and torsion
constants

*Sun Oct 30 2011 Henri Gavin <.> 0.20100105
- update user-manual.html regarding shear correction factors

*Sun Mar 27 2011 Henri Gavin <.> 0.20100105
- add .CSV input data template from Simon Fendall

*Mon Mar 7 2011 Henri Gavin <.> 0.20100105
- modify computation of internal forces from interior-span point loads, now the shear force drop due to interior point loads occurs over a span of 2*dx.

*Wed Feb 2 2011 Henri Gavin <.> 0.20100105
-   re-commit after source-forge hack of Jan 28 2011.

*Thu Dec 23 2010 Henri Gavin <.> 0.20100105
- add caveat on maximum shear stress in user manual

*Wed Dec 1 2010 Henri Gavin <.> 0.20100105
- fixed bug related to linear analysis of temperature loads
- added ascii (ANSI.SYS) color to screen output hpgUtils.c hpgUtils.h
- The Win32 "Command Prompt" does not recognize ANSI.SYS escape sequences at
all.
- the .ZIP source code distribution now includes the examples
- more efficient .ZIP archiving in .zipdist.sh

*Fri Nov 26 2010 Henri Gavin <.> 0.20100105
- updated user-manual.html with Gnuplot links to www.gnuplot.info
and removed links to http://www.duke.edu/~hpgavin/gnuplot.html

*Wed Nov 10 2010 Henri Gavin <.> 0.20100105
- improve comments and documentation on the '-e' command line flag

*Tue Nov  9 2010 Henri Gavin <.> 0.20100105
- added program name, description, url and author to LICENSE.txt

*Sat Oct 10 2010 Henri Gavin <.> 0.20100105
- fix typo re: local section axes in section 7.6 of manual
- set value of steel density in exA.3dd, exC.3dd, exD.3dd, and exG.3dd to 7.33e-7 k/in^3/g

*Tue Sep  7 2010 Henri Gavin <.> 0.20100105
- bug fix in call to lumped_M (switched beam mass BMs and roll angle p) 

*Wed Aug 12 2010 Henri Gavin <.> 0.20100105
- add wxWidgets link to TODO.txt
