@@ -1193,10 +1193,10 @@ of the material perpendicular to the local <i>x</i>-axis.
 <p>
 For slender frame elements shear deformations contribute
 only slightly to the overall structural deformation
-(less than three percent for elements with a span-to-depth ratio greater than 10).
+(less than three percent for structures with a span-to-depth ratio greater than 10).
 For stocky frame elements shear deformations contribute
 significantly to the overall structural deformation 
-(more than seventy percent for elements with a span-to-depth ratio less than 2).
+(more than seventy percent for structures with a span-to-depth ratio less than 2).
 Shear strains in frame elements are distributed in a relatively complicated manner over the cross section and   
 the shear area values, <i>Asy</i> and <i>Asz</i>, account for this non-uniform distributions of shear strain.  
 Shear areas may be thought of as effective cross-sectional areas corresponding to the average shear strain over the cross section, <i>V/(GAx)</i>.   
@@ -1206,8 +1206,8 @@ cross sections provide approximations for these cross section properties
 that plane sections remain plane,
 that shear stresses are constant across the width of a section 
 (shear stress is permissible at a free surface), and 
-without consideration of lateral strains due to the Poisson effect).  
-They are computed based upon an assumed uniform shear flow across the 
+without consideration of lateral strains arising from the Poisson effect).  
+These shear area equations are computed based upon an assumed uniform shear flow across the 
 wall of tube sections.  
 Additional shear area approximations (below) for solid circular and rectangular sections
 having a Poisson ratio, <i>v</i>, from 0.16 to 0.38 do account for Poisson's effect and have been experimentally validated.  
