@@ -1,4 +1,7 @@
 *Tue Nov 1 2011 Henri Gavin <.> 0.20100105
+- wordsmithing in user-manual.html regarding shear effects
+
+*Tue Nov 1 2011 Henri Gavin <.> 0.20100105
 - correction to user-manual.html regarding shear correction factor equations 
 
 *Mon Oct 31 2011 Henri Gavin <.> 0.20100105
